# qtsamples

./: README.md
c++11/: README
debugmsg/: CMakeLists.txt  qtdebug.cpp  qtdebug1.cpp
playaudio/: main.cpp  playaudio.pro
